table new row added

--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
             <td>Masum</td>
             <td>0123456789</td>
         </tr>
+        <tr>
+          <td>2</td>
+          <td>Raihan</td>
+          <td>0123456789</td>
+      </tr>
 
     </table>
 
