--- a/index.html
+++ b/index.html
@@ -59,13 +59,22 @@
     <!--  -->
     <h2>Image tag</h2>
     <img
+      class="catImage"
+      src="https://img.freepik.com/free-vector/sticker-template-cat-cartoon-character_1308-73786.jpg?w=2000"
+      alt="cat"
+      width="200"
+      height="200"
+    />
+    <img
+      class="catImage1"
       src="https://img.freepik.com/free-vector/sticker-template-cat-cartoon-character_1308-73786.jpg?w=2000"
       alt="cat"
       width="200"
       height="200"
     />
 
-    <img src="./imges/flower.jpg" alt="flower" width="200" height="200" />
+    <img id="flowerImage" src="./imges/flower.jpg" alt="flower" width="200" height="200" />
+    <img id="flowerImage1" src="./imges/flower.jpg" alt="flower" width="200" height="200" />
 
     <hr />
     <p>-------------------------------List-----------------------------</p>
